[gd_scene load_steps=13 format=3 uid="uid://dwte2o0s8prvc"]

[ext_resource type="Texture2D" uid="uid://dllch10wd263e" path="res://Art/GUI/gui-health.png" id="1_f631f"]
[ext_resource type="Script" path="res://Scenes/HUD/Player_Hud.gd" id="1_ke4ri"]
[ext_resource type="Texture2D" uid="uid://ccsbftgts2qoy" path="res://Art/Items/HUD/KeyHUD.png" id="2_3kr46"]
[ext_resource type="PackedScene" uid="uid://48b78k5g6jsj" path="res://Scenes/HUD/heart_Gui.tscn" id="2_klym5"]
[ext_resource type="FontFile" uid="uid://cqluqgfb6mw06" path="res://Art/Font/nintendo-nes-font.ttf" id="3_0pvnb"]
[ext_resource type="Texture2D" uid="uid://ctv1mcw0okdbi" path="res://Art/Items/HUD/MagieContenaire.png" id="3_2mb10"]
[ext_resource type="Texture2D" uid="uid://byd6ekix5e3l8" path="res://Art/Items/HUD/Arrow.png" id="4_gefu8"]
[ext_resource type="Texture2D" uid="uid://bp0tojbh218c3" path="res://Art/Items/HUD/ItemContenaire.png" id="4_jteng"]
[ext_resource type="Texture2D" uid="uid://cl62xewqw7bn" path="res://Art/Items/HUD/Rupee.png" id="6_f7mrw"]
[ext_resource type="Texture2D" uid="uid://buv7rarpya4kl" path="res://Art/Items/HUD/Bombe.png" id="7_sqdr3"]
[ext_resource type="Script" path="res://Scenes/HUD/ItemContenaire.gd" id="8_73g5m"]
[ext_resource type="Texture2D" uid="uid://sl8wirsugjdf" path="res://Art/Items/HUD/Progress_Bar.png" id="11_18pxs"]

[node name="PlayerHud" type="CanvasLayer"]
layer = 2
script = ExtResource("1_ke4ri")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="KeyHud" type="Sprite2D" parent="Control"]
position = Vector2(224, 16)
texture = ExtResource("2_3kr46")

[node name="Nb_Keys" type="Label" parent="Control/KeyHud"]
offset_left = -8.0
offset_top = 13.0
offset_right = 8.0
offset_bottom = 22.0
theme_override_fonts/font = ExtResource("3_0pvnb")
theme_override_font_sizes/font_size = 8
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Control"]
position = Vector2(537, 7)
texture = ExtResource("1_f631f")
region_enabled = true
region_rect = Rect2(29, 0, 34, 8)

[node name="Arrow" type="Sprite2D" parent="Control"]
position = Vector2(194, 14)
texture = ExtResource("4_gefu8")

[node name="Nb_Arrow" type="Label" parent="Control/Arrow"]
offset_left = -8.0
offset_top = 15.0
offset_right = 8.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("3_0pvnb")
theme_override_font_sizes/font_size = 8
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rupee" type="Sprite2D" parent="Control"]
position = Vector2(160, 16)
texture = ExtResource("6_f7mrw")

[node name="Nb_Rupees" type="Label" parent="Control/Rupee"]
offset_left = -10.6667
offset_top = 12.6667
offset_right = 13.3333
offset_bottom = 20.6667
theme_override_fonts/font = ExtResource("3_0pvnb")
theme_override_font_sizes/font_size = 8
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bombe" type="Sprite2D" parent="Control"]
position = Vector2(256, 16)
texture = ExtResource("7_sqdr3")

[node name="Nb_Bombe" type="Label" parent="Control/Bombe"]
offset_left = -8.0
offset_top = 13.0
offset_right = 8.0
offset_bottom = 22.0
theme_override_fonts/font = ExtResource("3_0pvnb")
theme_override_font_sizes/font_size = 8
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemContenaire" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 22.0
offset_right = 104.0
offset_bottom = 62.0
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_jteng")
script = ExtResource("8_73g5m")

[node name="CenterContainer" type="CenterContainer" parent="Control/ItemContenaire"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="item" type="TextureRect" parent="Control/ItemContenaire/CenterContainer"]
layout_mode = 2

[node name="MagieContenaire" type="TextureRect" parent="Control"]
layout_mode = 0
offset_top = 22.0
offset_right = 40.0
offset_bottom = 62.0
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_jteng")
script = ExtResource("8_73g5m")

[node name="CenterContainer" type="CenterContainer" parent="Control/MagieContenaire"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="item" type="TextureRect" parent="Control/MagieContenaire/CenterContainer"]
layout_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="Control"]
layout_mode = 0
offset_left = 472.0
offset_top = 14.0
offset_right = 602.0
offset_bottom = 38.0
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 2
alignment = 1

[node name="Heart" parent="Control/HFlowContainer" instance=ExtResource("2_klym5")]
layout_mode = 2

[node name="Heart2" parent="Control/HFlowContainer" instance=ExtResource("2_klym5")]
layout_mode = 2

[node name="Heart3" parent="Control/HFlowContainer" instance=ExtResource("2_klym5")]
layout_mode = 2

[node name="Heart4" parent="Control/HFlowContainer" instance=ExtResource("2_klym5")]
layout_mode = 2

[node name="Heart5" parent="Control/HFlowContainer" instance=ExtResource("2_klym5")]
layout_mode = 2

[node name="Heart6" parent="Control/HFlowContainer" instance=ExtResource("2_klym5")]
layout_mode = 2

[node name="Heart7" parent="Control/HFlowContainer" instance=ExtResource("2_klym5")]
layout_mode = 2

[node name="Heart8" parent="Control/HFlowContainer" instance=ExtResource("2_klym5")]
layout_mode = 2

[node name="Heart9" parent="Control/HFlowContainer" instance=ExtResource("2_klym5")]
layout_mode = 2

[node name="Heart10" parent="Control/HFlowContainer" instance=ExtResource("2_klym5")]
layout_mode = 2

[node name="Heart11" parent="Control/HFlowContainer" instance=ExtResource("2_klym5")]
layout_mode = 2

[node name="Heart12" parent="Control/HFlowContainer" instance=ExtResource("2_klym5")]
layout_mode = 2

[node name="Heart13" parent="Control/HFlowContainer" instance=ExtResource("2_klym5")]
layout_mode = 2

[node name="Heart14" parent="Control/HFlowContainer" instance=ExtResource("2_klym5")]
layout_mode = 2

[node name="Heart15" parent="Control/HFlowContainer" instance=ExtResource("2_klym5")]
layout_mode = 2

[node name="Heart16" parent="Control/HFlowContainer" instance=ExtResource("2_klym5")]
layout_mode = 2

[node name="Heart17" parent="Control/HFlowContainer" instance=ExtResource("2_klym5")]
layout_mode = 2

[node name="Heart18" parent="Control/HFlowContainer" instance=ExtResource("2_klym5")]
layout_mode = 2

[node name="Heart19" parent="Control/HFlowContainer" instance=ExtResource("2_klym5")]
layout_mode = 2

[node name="Heart20" parent="Control/HFlowContainer" instance=ExtResource("2_klym5")]
layout_mode = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="Control"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 124.0
offset_bottom = 25.0
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
texture_under = ExtResource("3_2mb10")
texture_progress = ExtResource("11_18pxs")
